--- a/src/components/TaxTools/PITCalculator.module.css
+++ b/src/components/TaxTools/PITCalculator.module.css
@@ -9,7 +9,7 @@
 
 .title {
     margin-bottom: 2rem;
-    color: var(--primary-blue);
+    color: var(--primary-brand);
     text-align: center;
 }
 
